--- a/src/index.html
+++ b/src/index.html
@@ -1180,7 +1180,7 @@
           </p>
           <div class="facebook-link-box flex--centered">
             <a
-              href="#"
+              href=""
               class="social-media-link"
               onclick='window.open("https://www.facebook.com/Khnamicenter");return false;'
             >
