--- a/src/index.html
+++ b/src/index.html
@@ -1094,6 +1094,7 @@
                 name="patient_diagnosis"
                 type="text"
                 placeholder="Oncology"
+                placeholder="Cancer"
                 required
               />
             </div>
