--- a/src/index.html
+++ b/src/index.html
@@ -911,7 +911,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/6QocharyanS.jpg"
+                  src="./assets/content/images/team/6QocharyanS .jpg"
                   alt="Team Members: Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -1028,7 +1028,7 @@
             <p
               class="cta-headline margin-bot--md language language--arm invisible"
             >
-              Ամրագրե՛ք Ձեր անվճար խորհրդատվությունը հենց հիմա:
+              Ամրագրե՛ք Ձեր անվճար խորհրդատվությունը հենց հիմա
             </p>
             <p class="cta-description margin-bot--md language language--en">
               Our team will contact you as soon as possible, and help you
@@ -1044,7 +1044,7 @@
               class="cta-description margin-bot--md language language--arm invisible"
             >
               Մեր թիմը հնարավորինս շուտ կկապվի ձեզ հետ և կօգնի ձեզ կազմակերպել
-              ձեր հարազատի մասնագիտացված խնամքը:
+              ձեր հարազատի մասնագիտացված խնամքը
             </p>
           </div>
           <form class="cta-form grid grid--3-cols" name="book-consultation">
