--- a/src/index.html
+++ b/src/index.html
@@ -117,30 +117,32 @@
             <p class="language language--ru invisible">РУC</p>
             <p class="language language--arm invisible">ՀԱՅ</p>
           </button>
-          <div class="lang-select-dropdown-content">
-            <a href="#" class="lang-select lang-select--arm flex--centered">
+          <div class="lang-select-dropdown-content hidden-content">
+            <a href="" class="lang-select lang-select--arm">
               <img
                 src="./assets/content/images/util/ARMflag.svg"
                 alt="ARM flag"
                 class="flag-img"
               />
-              Հայերեն</a
+              <p class="armenian">Հայերեն</p>
+              </a
             >
-            <a href="#" class="lang-select lang-select--ru flex--centered">
+            <a href="" class="lang-select lang-select--ru">
               <img
                 src="./assets/content/images/util/RUflag.svg"
                 alt="RU flag"
                 class="flag-img"
               />
-              Русский</a
+              <p>Русский</p>
+              </a
             >
-            <a href="#" class="lang-select lang-select--en flex--centered">
+            <a href="" class="lang-select lang-select--en">
               <img
                 src="./assets/content/images/util/UKflag.svg"
                 alt="UK flag"
                 class="flag-img"
-              />
-              English</a
+              /> <p>English</p>
+              </a
             >
           </div>
         </div>
@@ -157,12 +159,12 @@
             >
               <ion-icon name="navigate-outline" class="header-icon"></ion-icon>
               <div class="header-address-text">
-                <p class="language language--en">Gusan Sherami 2, Yerevan</p>
+                <p class="language language--en">Gusan Sherami 2</p>
                 <p class="language language--ru invisible">
-                  Гусан Шерами 2, Ереван
+                  Гусан Шерами 2
                 </p>
                 <p class="language language--arm invisible">
-                  Գուսան Շերամի 2, Երեվան
+                  Գուսան Շերամի 2
                 </p>
               </div>
             </a>
@@ -1262,29 +1264,29 @@
               <ion-icon name="caret-down-outline"></ion-icon>
             </button>
             <div class="lang-select-dropdown-content">
-              <a href="" class="lang-select lang-select--arm flex--centered">
+              <a href="#" class="lang-select lang-select--arm">
                 <img
                   src="./assets/content/images/util/ARMflag.svg"
                   alt="ARM flag"
                   class="flag-img"
                 />
-                Հայերեն</a
+                <p class="armenian">Հայերեն</p></a
               >
-              <a href="" class="lang-select lang-select--ru flex--centered">
+              <a href="#" class="lang-select lang-select--ru">
                 <img
                   src="./assets/content/images/util/RUflag.svg"
                   alt="RU flag"
                   class="flag-img"
                 />
-                Русский</a
+                <p>Русский</p></a
               >
-              <a href="" class="lang-select lang-select--en flex--centered">
+              <a href="#" class="lang-select lang-select--en">
                 <img
                   src="./assets/content/images/util/UKflag.svg"
                   alt="UK flag"
                   class="flag-img"
                 />
-                English</a
+                <p>English</p></a
               >
             </div>
           </div>
