--- a/src/index.html
+++ b/src/index.html
@@ -307,7 +307,7 @@
                 class="services-main-icon"
               ></ion-icon>
             </div>
-            <ul class="services--accomodation list">
+            <ul class="services--list list">
               <li class="service">
                 <div class="checkmark">
                   <ion-icon
@@ -387,7 +387,7 @@
                 class="services-main-icon"
               ></ion-icon>
             </div>
-            <ul class="services--accomodation list">
+            <ul class="services--list list">
               <li class="service">
                 <div class="checkmark">
                   <ion-icon
@@ -439,7 +439,7 @@
                   ></ion-icon>
                 </div>
                 <p class="language language--en">
-                  Bed linen and household items
+                  Bed linen, household items
                 </p>
                 <p class="language language--ru invisible">
                   Постельное белье и предметы быта
@@ -465,7 +465,7 @@
                 class="services-main-icon"
               ></ion-icon>
             </div>
-            <ul class="services--accomodation list">
+            <ul class="services--list list">
               <li class="service">
                 <div class="checkmark">
                   <ion-icon
@@ -756,7 +756,6 @@
         </div>
         <!-- team members -->
         <div class="container grid--team">
-          <div class="grid--team-row grid--team-row-padded grid--3-cols">
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
@@ -832,8 +831,6 @@
                 Ընտանեկան բժիշկ
               </p>
             </div>
-          </div>
-          <div class="grid--team-row grid--4-cols">
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
@@ -928,8 +925,6 @@
                 Բուժքույր
               </p>
             </div>
-          </div>
-          <div class="grid--team-row grid--team-row-padded grid--3-cols">
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
@@ -1004,8 +999,6 @@
               <p class="team-member-title language language--arm invisible">
                 Խնամող
               </p>
-            </div>
-          </div>
         </div>
       </section>
       <!-- CTA -->
