--- a/src/index.html
+++ b/src/index.html
@@ -442,7 +442,7 @@
                   Bed linen, household items
                 </p>
                 <p class="language language--ru invisible">
-                  Постельное белье и предметы быта
+                  Белье и бытовые предметы 
                 </p>
                 <p class="language language--arm invisible">
                   Սպիտակեղեն և կենցաղային իրեր
