--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,17 @@
       <div class="header-contact">
         <div class="header-contact-container flex--centered-vertically">
           <address class="header-address grid">
+            <!-- mobile navbar -->
+          <button class="btn-mobile-nav">
+            <ion-icon
+              name="menu-outline"
+              class="icon-mobile-nav btn--open-nav"
+            ></ion-icon>
+            <ion-icon
+              name="close-outline"
+              class="icon-mobile-nav btn--close-nav"
+            ></ion-icon>
+          </button>
             <!-- map location -->
             <a
               href="#"
