--- a/src/index.html
+++ b/src/index.html
@@ -550,7 +550,7 @@
           </h2>
         </div>
         <!-- gallery container -->
-        <div class="gallery container grid">
+        <div class="gallery--container gallery grid">
           <div class="gallery-element">
             <!-- gallery image -->
             <div class="gallery-img-box shadow--dark--strong"></div>
@@ -568,9 +568,8 @@
               ></ion-icon>
             </btn>
           </div>
-        </div>
-        <!-- gallery navigation -->
-        <nav class="gallery-nav container">
+          <!-- gallery navigation -->
+        <nav class="gallery-nav">
           <ul class="gallery-nav-bullets list">
             <li class="gallery-nav-bullet" id="gallery_bullet_1">
               <ion-icon name="ellipse" class="gallery-nav-icon"></ion-icon>
@@ -613,6 +612,8 @@
             </li>
           </ul>
         </nav>
+        </div>
+        
         <!-- testimonials container -->
         <div class="testimonials container grid grid--2-cols">
           <div class="testimonial-box">
@@ -1165,7 +1166,7 @@
     <footer class="footer" id="footer">
       <div class="container footer-content grid">
         <!-- facebook -->
-        <div class="social-media-box flex-column padding-top--sm">
+        <div class="footer-item social-media-box flex-column padding-top--sm">
           <p class="footer-headline center-text language language--en">
             Follow us on Facebook!
           </p>
@@ -1190,13 +1191,13 @@
           </div>
         </div>
         <!-- logo and copyright -->
-        <div class="footer-logo-and-copyright flex-column">
+        <div class="footer-item footer-logo-and-copyright flex-column">
           <div class="footer-logo-box">
             <a href="#" class="btn footer-link--home"
               ><img
                 src="./assets/content/images/logo.png"
                 alt="Khnami Logo"
-                class="header-logo-img"
+                class="footer-logo-img"
             /></a>
           </div>
           <div class="footer-copyright-box">
@@ -1212,7 +1213,7 @@
           </div>
         </div>
         <!-- adress -->
-        <div class="footer-contact flex-column padding-top--sm">
+        <div class="footer-item footer-contact flex-column padding-top--sm">
           <p class="footer-headline language language--en">Contact</p>
           <p class="footer-headline language language--ru invisible">Контакт</p>
           <p class="footer-headline language language--arm invisible">Կապ</p>
@@ -1232,7 +1233,7 @@
           <p class="footer-contact-email">khnamicenter@yahoo.com</p>
         </div>
         <!-- language select -->
-        <div class="footer-lang-select flex-column padding-top--sm">
+        <div class="footer-item footer-lang-select flex-column padding-top--sm">
           <p class="footer-headline language language--en">Language</p>
           <p class="footer-headline language language--ru invisible">Язык</p>
           <p class="footer-headline language language--arm invisible">Լեզու</p>
@@ -1262,7 +1263,7 @@
               </p>
               <ion-icon name="caret-down-outline"></ion-icon>
             </button>
-            <div class="lang-select-dropdown-content">
+            <div class="lang-select-dropdown-content footer--lang-select-dropdown-content">
               <a href="#" class="lang-select lang-select--arm">
                 <img
                   src="./assets/content/images/util/ARMflag.svg"
