--- a/src/index.html
+++ b/src/index.html
@@ -1263,7 +1263,7 @@
               </p>
               <ion-icon name="caret-down-outline"></ion-icon>
             </button>
-            <div class="lang-select-dropdown-content footer--lang-select-dropdown-content">
+            <div class="lang-select-dropdown-content footer--lang-select-dropdown-content hidden-content">
               <a href="#" class="lang-select lang-select--arm">
                 <img
                   src="./assets/content/images/util/ARMflag.svg"
