--- a/src/index.html
+++ b/src/index.html
@@ -383,7 +383,43 @@
         <div class="gallery container grid">
           <div class="gallery-element">
             <!-- gallery image -->
-            <div class="gallery-img-box shadow--dark--strong"></div>
+            <div class="gallery-img-box shadow--dark--strong">
+              <img
+                class="gallery-img"
+                src="./assets/content/images/gallery/Gallery-img-1.jpg"
+                alt="Gallery Image 1"
+              />
+              <img
+                class="gallery-img hidden"
+                src="./assets/content/images/gallery/Gallery-img-2.jpg"
+                alt="Gallery Image 2"
+              />
+              <img
+                class="gallery-img hidden"
+                src="./assets/content/images/gallery/Gallery-img-3.jpg"
+                alt="Gallery Image 3"
+              />
+              <img
+                class="gallery-img hidden"
+                src="./assets/content/images/gallery/Gallery-img-4.jpg"
+                alt="Gallery Image 4"
+              />
+              <img
+                class="gallery-img hidden"
+                src="./assets/content/images/gallery/Gallery-img-5.jpg"
+                alt="Gallery Image 5"
+              />
+              <img
+                class="gallery-img hidden"
+                src="./assets/content/images/gallery/Gallery-img-6.jpg"
+                alt="Gallery Image 6"
+              />
+              <img
+                class="gallery-img hidden"
+                src="./assets/content/images/gallery/Gallery-img-7.jpg"
+                alt="Gallery Image 7"
+              />
+            </div>
             <!-- gallery buttons -->
             <btn class="gallery-btn gallery-btn-left">
               <ion-icon
