--- a/src/index.html
+++ b/src/index.html
@@ -549,32 +549,32 @@
                 alt="Gallery Image 1"
               />
               <img
-                class="gallery-img hidden"
+                class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-2.jpg"
                 alt="Gallery Image 2"
               />
               <img
-                class="gallery-img hidden"
+                class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-3.jpg"
                 alt="Gallery Image 3"
               />
               <img
-                class="gallery-img hidden"
+                class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-4.jpg"
                 alt="Gallery Image 4"
               />
               <img
-                class="gallery-img hidden"
+                class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-5.jpg"
                 alt="Gallery Image 5"
               />
               <img
-                class="gallery-img hidden"
+                class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-6.jpg"
                 alt="Gallery Image 6"
               />
               <img
-                class="gallery-img hidden"
+                class="gallery-img invisible"
                 src="./assets/content/images/gallery/Gallery-img-7.jpg"
                 alt="Gallery Image 7"
               />
