--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,9 @@
     }
   </style>
   <body>
+    <!-- TEST FLOAT  -->
+    <!-- <div class="floating"></div> -->
+    <!-- TEST FLOAT  -->
     <!-- HEADER -->
     <div class="header-background"></div>
     <header class="header container flex--centered-vertically">
