--- a/src/index.html
+++ b/src/index.html
@@ -315,7 +315,7 @@
                   Комфорт и приватность
                 </p>
                 <p class="language language--arm invisible">
-                  Հարմարավետություն և պրիվատություն
+                  Հարմարավետութ և պրիվատ
                 </p>
               </li>
               <li class="service">
@@ -484,7 +484,7 @@
                   Центральная подача кислорода
                 </p>
                 <p class="language language--arm invisible">
-                  Կենտրոնական մատակարարված թթվածին
+                  Կենտրոնական թթվածին
                 </p>
               </li>
               <li class="service">
