--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,20 @@
     <!-- Meta description -->
     <meta
       name="description"
-      content="The Khnami Center provides palliative care to the elderly and adult population of Yerevan and the surrounding regions. The Khnami Palliative Center was founded in November 2019, and licensed by the Ministry of Health of Armenia in June 2020. Already in July 2020, the center accepted its first patients. "
+      lang="en"
+      content="Khnami Center provides palliative help and care to the elderly and adult population of Yerevan and the surrounding regions."
     />
+    <meta
+      name="description"
+      lang="ru"
+      content="Центр «Хнами» оказывает паллиативную помощь и уход пожилому и взрослому населению Еревана и близлежащих регионов."
+    />
+    <meta
+      name="description"
+      lang="arm"
+      content="Խնամի կենտրոնը պալիատիվ օգնություն և խնամք է ցուցաբերում Երևանի և հարակից մարզերի տարեց և չափահաս բնակչությանը։"
+    />
+    <meta name="keywords" content="palliative, care, help, паллиативный, уход, помощь, պալիատիվ, խնամք, օգնություն">
     <!-- Favicon Package -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
