--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="hero-img-box">
             <img
-              src="./assets/content/images/Personnel 1 - cropped-enhanced.png"
+              src="./assets/content/images/Personnel 1 - cropped-enhanced.webp"
               alt="Khnami Center nurses smiling for a group personnel picture"
               class="hero-img shadow"
             />
@@ -537,37 +537,37 @@
             <div class="gallery-img-box shadow--dark--strong">
               <img
                 class="gallery-img"
-                src="./assets/content/images/gallery/Gallery-img-1.jpg"
+                src="./assets/content/images/gallery/Gallery-img-1.webp"
                 alt="Gallery Image 1"
               />
               <img
                 class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-2.jpg"
+                src="./assets/content/images/gallery/Gallery-img-2.webp"
                 alt="Gallery Image 2"
               />
               <img
                 class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-3.jpg"
+                src="./assets/content/images/gallery/Gallery-img-3.webp"
                 alt="Gallery Image 3"
               />
               <img
                 class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-4.jpg"
+                src="./assets/content/images/gallery/Gallery-img-4.webp"
                 alt="Gallery Image 4"
               />
               <img
                 class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-5.jpg"
+                src="./assets/content/images/gallery/Gallery-img-5.webp"
                 alt="Gallery Image 5"
               />
               <img
                 class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-6.jpg"
+                src="./assets/content/images/gallery/Gallery-img-6.webp"
                 alt="Gallery Image 6"
               />
               <img
                 class="gallery-img invisible"
-                src="./assets/content/images/gallery/Gallery-img-7.jpg"
+                src="./assets/content/images/gallery/Gallery-img-7.webp"
                 alt="Gallery Image 7"
               />
             </div>
@@ -635,7 +635,7 @@
         <div class="testimonials container grid grid--2-cols">
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customers/customer sirush.jpg"
+              src="./assets/content/images/customers/customer Sirush.webp"
               alt="Customer Face"
               class="testimonial-img margin-bot--sm"
             />
@@ -669,7 +669,7 @@
           </div>
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customers/customer Ashot.jpg"
+              src="./assets/content/images/customers/customer Ashot.webp"
               alt="Customer Face"
               class="testimonial-img margin-bot--sm"
             />
@@ -702,7 +702,7 @@
           </div>
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customers/customer Irina.jpg"
+              src="./assets/content/images/customers/customer Irina.webp"
               alt="Customer Face"
               class="testimonial-img margin-bot--sm"
             />
@@ -737,7 +737,7 @@
           </div>
           <div class="testimonial-box">
             <img
-              src="./assets/content/images/customers/customer Anahit.jpg"
+              src="./assets/content/images/customers/customer Anahit.webp"
               alt="Customer Face"
               class="testimonial-img margin-bot--sm"
             />
@@ -788,7 +788,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/1BeglaryanD.jpg"
+                  src="./assets/content/images/team/1BeglaryanD.webp"
                   alt="Team Members: Head Of The Center"
                   class="team-member-img shadow--dark"
                 />
@@ -813,7 +813,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/7DemirchyanE.jpg"
+                  src="./assets/content/images/team/7DemirchyanE.webp"
                   alt="Team Members: Oncologist"
                   class="team-member-img shadow--dark"
                 />
@@ -838,7 +838,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/4MazmanyanV.jpg"
+                  src="./assets/content/images/team/4MazmanyanV.webp"
                   alt="Team Members: Family Doctor"
                   class="team-member-img shadow--dark"
                 />
@@ -863,7 +863,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/8NersisyanS.jpg"
+                  src="./assets/content/images/team/8NersisyanS.webp"
                   alt="Team Members: Senior Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -888,7 +888,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/3SuqiasyanK.jpg"
+                  src="./assets/content/images/team/3SuqiasyanK.webp"
                   alt="Team Members: Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -911,7 +911,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/9Sirekyan.jpg"
+                  src="./assets/content/images/team/9Sirekyan.webp"
                   alt="Team Members: Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -934,7 +934,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/6QocharyanS .jpg"
+                  src="./assets/content/images/team/6QocharyanS .webp"
                   alt="Team Members: Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -957,7 +957,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/5GarakeshishyanS.jpg"
+                  src="./assets/content/images/team/5GarakeshishyanS.webp"
                   alt="Team Members: Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -982,7 +982,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/10Karapetyan.jpg"
+                  src="./assets/content/images/team/10Karapetyan.webp"
                   alt="Team Members: Nurse"
                   class="team-member-img shadow--dark"
                 />
@@ -1007,7 +1007,7 @@
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
                 <img
-                  src="./assets/content/images/team/2TantushyanR.jpg"
+                  src="./assets/content/images/team/2TantushyanR.webp"
                   alt="Team Members: Caregiver"
                   class="team-member-img shadow--dark"
                 />
