added back jpgs

--- a/src/index.html
+++ b/src/index.html
@@ -787,11 +787,21 @@
         <div class="container grid--team">
             <div class="team-member-box flex-column">
               <div class="img-box margin-bot--sm">
+                <picture>
+                  <source
+                    src="./assets/content/images/team/1BeglaryanD.webp"
+                    type="image/webp"
+                  />
+                  <source
+                    src="./assets/content/images/team/1BeglaryanD.jpg"
+                    type="image/jpg"
+                  />
                 <img
                   src="./assets/content/images/team/1BeglaryanD.webp"
-                  alt="Team Members: Head Of The Center"
                   class="team-member-img shadow--dark"
+                  alt="Team Members: Head Of The Center"
                 />
+                 </picture>
               </div>
               <p class="team-member-name language language--en">Beglaryan D.</p>
               <p class="team-member-name language language--ru invisible">
