--- a/src/index.html
+++ b/src/index.html
@@ -789,14 +789,14 @@
               <div class="img-box margin-bot--sm">
                 <picture>
                   <source
-                    src="./assets/content/images/team/1BeglaryanD.webp"
+                    srcset="./assets/content/images/team/1BeglaryanD.webp"
                     type="image/webp"
                   />
-                <img
-                  src="./assets/content/images/team/1BeglaryanD.jpg"
-                  class="team-member-img shadow--dark"
-                  alt="Team Members: Head Of The Center"
-                />
+                  <img
+                    src="./assets/content/images/team/1BeglaryanD.jpg"
+                    class="team-member-img shadow--dark"
+                    alt="Team Members: Head Of The Center"
+                  />
                  </picture>
               </div>
               <p class="team-member-name language language--en">Beglaryan D.</p>
